samples/_failures_safe/1761127907_a28d39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22b84e21.c: In function ‘main’:
./samples/SAFE/__tmp_22b84e21.c:170:45: error: expected ‘)’ at end of input
  170 |     int token_count = tokenize(input, tokens
      |                               ~             ^
      |                                             )
./samples/SAFE/__tmp_22b84e21.c:170:23: error: too few arguments to function ‘tokenize’
  170 |     int token_count = tokenize(input, tokens
      |                       ^~~~~~~~
./samples/SAFE/__tmp_22b84e21.c:71:5: note: declared here
   71 | int tokenize(const char* input, Token* tokens, int max_tokens) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_22b84e21.c:170:5: error: expected declaration or statement at end of input
  170 |     int token_count = tokenize(input, tokens
      |     ^~~
